# roboverb

./: .clang-format  .gitignore  .gitmodules  LICENSE.txt  README.md  meson.build  meson_options.txt  msvc.ini  wscript
.github/: FUNDING.yml
data/: color_knob.knob  sphere_scope.knob  toggle_switch.knob
data/installers/inno/: Roboverb.iss
data/installers/nsis/: Roboverb.nsh
data/jucer/: Roboverb.jucer
data/jucer/JuceLibraryCode/: AppConfig.h  BinaryData.h  JuceHeader.h
data/jucer/Source/: PluginProcessor.h
data/jucer/Templates/: Component.cpp  Component.h
installers/inno/: Roboverb.iss
installers/nsis/: Roboverb.nsh  Roboverb_x64.nsi
lv2/: JuceHeader.h  manifest.ttl.in  plugin.cpp  ports.h  roboverb.ttl  ui.cpp
roboverb/: Roboverb.jucer
roboverb.lv2/: CombFilter.cpp  CombFilter.h  JuceHeader.h  Plugin.cpp  Roboverb.cpp  Roboverb.h  Tags.h  UI.cpp  juceui.ttl  manifest.ttl.in  meson.build  plugin.cpp  ports.hpp  roboverb.cpp  roboverb.hpp  roboverb.ttl  roboverb.ttl.in  ui.cpp
roboverb.lv2/compat/: JuceHeader.h
roboverb.lv2/nk/: UI.cpp
roboverb.lv2/ui/: AboutBox.cpp  AboutBox.h  PluginView.cpp  PluginView.h  UI.cpp  meson.build
roboverb.lv2/ui/nanovg/: nanovg_gl.c
roboverb/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST.plist  Info-VST3.plist  Info.plist
roboverb/Builds/MacOSX/Roboverb.xcodeproj/: project.pbxproj
roboverb/Builds/VisualStudio2013/: Roboverb.sln  Roboverb.vcxproj  Roboverb.vcxproj.filters  Roboverb_SharedCode.vcxproj  Roboverb_SharedCode.vcxproj.filters  Roboverb_StandalonePlugin.vcxproj  Roboverb_StandalonePlugin.vcxproj.filters  Roboverb_VST.vcxproj  Roboverb_VST.vcxproj.filters  Roboverb_VST3.vcxproj  Roboverb_VST3.vcxproj.filters  resources.rc
roboverb/Builds/VisualStudio2017/: Roboverb.sln  Roboverb_SharedCode.vcxproj  Roboverb_SharedCode.vcxproj.filters  Roboverb_StandalonePlugin.vcxproj  Roboverb_VST.vcxproj  Roboverb_VST3.vcxproj  resources.rc
roboverb/JuceLibraryCode/: AppConfig.h  BinaryData.h  JuceHeader.h
roboverb/JuceLibraryCode/modules/element_base/: element_base.h
roboverb/JuceLibraryCode/modules/element_models/: element_models.h
roboverb/JuceLibraryCode/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h
roboverb/JuceLibraryCode/modules/juce_audio_processors/: juce_audio_processors.h
roboverb/JuceLibraryCode/modules/juce_core/: juce_core.h
roboverb/JuceLibraryCode/modules/juce_graphics/: juce_graphics.h
roboverb/JuceLibraryCode/modules/juce_gui_basics/: juce_gui_basics.h
roboverb/JuceLibraryCode/modules/juce_gui_extra/: juce_gui_extra.h
roboverb/Source/: AboutBox.cpp  AboutBox.h  CombFilter.cpp  CombFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginView.cpp  PluginView.h  Roboverb.h  SphereScope.h
src/: clap.cpp  meson.build  plugin.cpp  ports.hpp  res.hpp  roboverb.cpp  roboverb.hpp  ui.cpp  ui.hpp
standalone/: Standalone.jucer
standalone/Builds/Android/: AndroidManifest.xml  build.xml
standalone/Builds/Android/jni/: Android.mk
standalone/Builds/Android/res/values/: strings.xml
standalone/Builds/Android/src/com/yourcompany/standalone/: Standalone.java
standalone/Builds/MacOSX/: Info.plist
standalone/Builds/MacOSX/Roboverb.xcodeproj/: project.pbxproj
standalone/Builds/VisualStudio2013/: Roboverb.sln  Roboverb.vcxproj  Roboverb.vcxproj.filters  resources.rc
standalone/Builds/iOS/: Info.plist
standalone/Builds/iOS/Roboverb.xcodeproj/: project.pbxproj
standalone/JuceLibraryCode/: AppConfig.h  JuceHeader.h
standalone/JuceLibraryCode/modules/element_gui/: element_gui.h
standalone/JuceLibraryCode/modules/juce_audio_basics/: juce_audio_basics.h
standalone/JuceLibraryCode/modules/juce_audio_devices/: juce_audio_devices.h
standalone/JuceLibraryCode/modules/juce_audio_formats/: juce_audio_formats.h
standalone/JuceLibraryCode/modules/juce_audio_utils/: juce_audio_utils.h
standalone/JuceLibraryCode/modules/juce_cryptography/: juce_cryptography.h
standalone/JuceLibraryCode/modules/juce_data_structures/: juce_data_structures.h
standalone/JuceLibraryCode/modules/juce_events/: juce_events.h
standalone/Source/: Main.cpp
subprojects/: .gitignore  lui.wrap  lvtk.wrap  pugl.wrap
tools/: build-windows.bat  list-identities.sh  make-src  makensis.bat  release-osx  release-osx.sh
tools/installers/nsis/: Roboverb.nsh  Roboverb_x64.nsi  Roboverb_x86.nsi
tools/jucer/: Roboverb.jucer
tools/jucer/JuceLibraryCode/: AppConfig.h  BinaryData.h  JuceHeader.h  JucePluginDefines.h
tools/jucer/Source/: AboutBox.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tools/waf/: juce.py
